# reduced_lagrange_multipliers

./: .gitignore  .gitlab-ci.yml  .travis.yml  3d_output_state.pvsm  CMakeLists.txt  COUPLED_PROBLEM.md  CTestTestfile.cmake  H2  Makefile  Plots.py  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  augmented__lagrangian_8h.html  augmented__lagrangian_8h.js  augmented__lagrangian_8h_source.html  augmented__lagrangian__preconditioner_8h.html  augmented__lagrangian__preconditioner_8h.js  augmented__lagrangian__preconditioner_8h_source.html  class_block_preconditioner_augmented_lagrangian-members.html  class_block_preconditioner_augmented_lagrangian.html  class_block_preconditioner_augmented_lagrangian.js  class_coupling_operator-members.html  class_coupling_operator.html  class_coupling_operator.js  class_elasticity_problem-members.html  class_elasticity_problem.html  class_elasticity_problem.js  class_elasticity_problem_parameters-members.html  class_elasticity_problem_parameters.html  class_elasticity_problem_parameters.js  class_immersed_repartitioner-members.html  class_immersed_repartitioner.html  class_immersed_repartitioner.js  class_inclusions-members.html  class_inclusions.html  class_inclusions.js  class_laplacian-members.html  class_laplacian.html  (+224 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: doxygen.yml  indentation.yml  tests.yml
apps/: app_blood_flow_1d.cc  app_coupled_elasticity.cc  app_elasticity.cc  app_laplacian.cc  app_pseudocoupling1D.cc  app_reduced_poisson.cc  app_uncoupled1D.cc  tree_junctions.cc
blender/: cylinders.blend  save_tree.py  small_tree.blend
data/: aortic_bifurcation.vtk  inclusions_data_T.txt  inclusions_data_bifurcation.txt  inclusions_data_bifurcation_1dadapted.txt  inclusions_points_T.txt  inclusions_points_bifurcation.txt  inclusions_points_bifurcation_1dadapted.txt  medium_tree_8_3d.gpl  small_tree_8_3d.gpl  three_cylinders_R005.gpl  three_cylinders_R0050.gpl  three_cylinders_R01.gpl  three_cylinders_R0100.gpl  three_cylinders_R02.gpl  three_cylinders_R02.vtk  three_cylinders_R0200.gpl  tree_3D.xml
data/bifurcation/: inclusions_data_bif_2503_0.05.txt  inclusions_points_bif_2503_0.05.txt  inflow2850.txt  inflow2850_P.txt
data/elasticity/: one_cylinder_3d.gpl  one_cylinder_3d.txt
data/generate_inclusions_file/: T_generate_points.py  bifurcation_generate_points.py  plot_inclusions.py  utils_1d_to_3d_data.py
data/input_data/: inclusion_data_21.txt  inclusion_data_36.txt  inclusion_data_4.txt  inclusion_data_49.txt  inclusion_data_4_3modes.txt  inclusion_data_50.txt  inclusion_data_61.txt  inclusion_data_9.txt  inclusion_data_93.txt  inclusion_points_10_random.txt  inclusion_points_16.txt  inclusion_points_35_random.txt  inclusion_points_36_ordered.txt  inclusion_points_36_random.txt  inclusion_points_49_ordered.txt  (+3 more)
doc/: Doxyfile  background.md  build-and-run.md  conf.py  copyright.txt  documentation.md  funding.md  getting-started.md  index.md  overview.md  references.bib  repository-layout.md  requirements.txt  testing.md
execute/: Plots.py  Plots_sarah.py  execute.sh  execute_200324.sh  execute_sensitivity_inclusions.sh  plot_sensitivity.py
gtests/: CMakeLists.txt  blood_flow_1d_01.cc  elasticity_01.cc  elasticity_02.cc  elasticity_checks.cc  fe_space_network.cc  gtest_main.cc  inclusions_02.cc  material_properties_checks.cc  particle_coupling_01.cc  reduced_coupling_01.cc  reduced_poisson_01.cc  reference_cross_section.cc  reference_cross_section_01.cc  reference_inclusion.cc  reference_inclusion_01.cc  reference_inclusion_02.cc  reference_inclusions_basis.cc  simple_check.cc  tensor_product_space_01.cc  vtk_utils_01.cc
include/: augmented_lagrangian.h  augmented_lagrangian_preconditioner.h  blood_flow_1d.h  coupled_elasticity.h  elasticity.h  elasticity_problem_parameters.h  immersed_repartitioner.h  inclusions.h  laplacian.h  material_properties.h  matrix_free_utils.h  modulated_parsed_function.h  nonlinear-poro-viscoelasticity.h  nonlinear_poro_viscoelasticity.h  particle_coupling.h  reduced_coupling.h  reduced_poisson.h  reference_cross_section.h  reference_inclusion.h  tensor_product_space.h  utils.h  vtk_utils.h
input_file/: prova_3d.prm  test_3d.prm
notebooks/: analytical_sol_lambda.ipynb  cylinder.ipynb  manufactured_solutions_elasticity_no_inclusions.ipynb  mst_generation.ipynb  mst_generation.py
prms/: blood_flow_parameters.prm  input_3d.prm  medium_tree_one_coeff_3d.prm  medium_tree_three_coeff_3d.prm  one_circle_convergence_various_coeffs.prm  one_circle_one_coeff.prm  one_circle_one_coeff_fundamental.prm  one_circle_three_coeff_radial.prm  prm2d.prm  prm3d.prm  prm3d_brain_cube.prm  small_tree_one_coeff.prm  small_tree_one_coeff_3d.prm  three_cylinders_3d.prm  three_cylinders_3d_various_coeffs.prm  three_cylinders_five_coeff_3d.prm  three_cylinders_one_coeff_3d.prm  three_cylinders_three_coeff_3d.prm
scripts/: build_doc.sh  convert_net_to_vtk.py  dr.sh  indent  make_prms.sh  make_table.sh  run_docker.sh  serve_doc.sh  strip_comments.sh  update_copyright.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+220 more)
source/: blood_flow_1d.cc  coupled_elasticity.cc  elasticity.cc  elasticity_problem_parameters.cc  immersed_repartitioner.cc  laplacian.cc  main.cc  matrix_free_utils.cc  modulated_parsed_function.cc  particle_coupling.cc  reduced_coupling.cc  reduced_poisson.cc  reference_cross_section.cc  reference_inclusion.cc  tensor_product_space.cc  vtk_utils.cc
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  matrix_free_transfers.cc  matrix_free_transfers.with_mpi=true.mpirun=3.output  template.cc  test_fourier_01.cc  test_fourier_01.output  tests.h
tutorials/: README.md
(+390 files in other folders)
